# mrs_multirotor_simulator

./: .gitignore  CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml  start.sh
.github/workflows/: noetic.yml
cfg/: multirotor_simulator.cfg
config/: hw_api.yaml  hw_api_plugin.yaml  multirotor_simulator.yaml  uavs.yaml  x500.yaml
config/controllers/: attitude_controller.yaml  mixer.yaml  position_controller.yaml  rate_controller.yaml  velocity_controller.yaml
config/mrs_uav_system/: a300.yaml  f330.yaml  f450.yaml  f550.yaml  robofly.yaml  t650.yaml  x500.yaml
config/uavs/: a300.yaml  f330.yaml  f450.yaml  f550.yaml  naki.yaml  robofly.yaml  t650.yaml  x500.yaml
include/: multirotor_model.h  nanoflann.hpp  quadrotor_model.h  uav_system.h  uav_system_ros.h
include/controllers/: acceleration_controller.h  attitude_controller.h  mixer.h  pid.h  position_controller.h  rate_controller.h  references.h  velocity_controller.h
include/mrs_multirotor_simulator/: multirotor_model.h  rate_counter.h  uav_system.h  uav_system_ros.h
include/mrs_multirotor_simulator/controllers/: acceleration_controller.h  attitude_controller.h  mixer.h  pid.h  position_controller.h  rate_controller.h  references.h  velocity_controller.h
include/mrs_multirotor_simulator/uav_system/: multirotor_model.h  multirotor_model.hpp  uav_system.h  uav_system.hpp
include/mrs_multirotor_simulator/uav_system/controllers/: acceleration_controller.h  acceleration_controller.hpp  attitude_controller.h  attitude_controller.hpp  mixer.h  mixer.hpp  pid.h  pid.hpp  position_controller.h  position_controller.hpp  rate_controller.h  rate_controller.hpp  references.h  references.hpp  velocity_controller.h  velocity_controller.hpp
include/mrs_multirotor_simulator/uav_system/controllers/impl/: acceleration_controller_impl.hpp  attitude_controller_impl.hpp  mixer_impl.hpp  pid_impl.hpp  position_controller_impl.hpp  rate_controller_impl.hpp  velocity_controller_impl.hpp
include/mrs_multirotor_simulator/uav_system/impl/: multirotor_model_impl.hpp  uav_system_impl.hpp
launch/: hw_api.launch  hw_api.py  multirotor_simulator.launch  multirotor_simulator.py  multirotor_simulator_alt.py
msg/: Diagnostics.msg
old/: CMakeLists.txt  nodelets.xml  package.xml  plugins.xml
old/launch/: hw_api.launch  multirotor_simulator.launch
scripts/: get_public_params.py
src/: hw_api_plugin.cpp  multirotor_model.cpp  multirotor_simulator.cpp  quadrotor_model.cpp  uav_system.cpp  uav_system_ros.cpp
src/controllers/: acceleration_controller.cpp  attitude_controller.cpp  mixer.cpp  position_controller.cpp  rate_controller.cpp  velocity_controller.cpp
tmux/100_uavs/: goto.py  rviz.rviz  session.yml  velocity_cmd_up.py
tmux/100_uavs/custom_configs/: simulator.yaml
tmux/20_uavs/: rviz.rviz  session.yml
tmux/400_uavs/: goto.py  rviz.rviz  session.yml  velocity_cmd.py
tmux/400_uavs/custom_configs/: simulator.yaml
tmux/api_testing/: session.yml
tmux/api_testing/custom_configs/: api.yaml  control_manager.yaml
tmux/gazebo_x500/: session.yml
tmux/mrs_20_uavs/: goto.py  rviz.rviz  session.yml
tmux/mrs_20_uavs/custom_configs/: hw_api_plugin.yaml  mpc_tracker.yaml  simulator.yaml  uav_manager.yaml
tmux/mrs_more_drones/: goto.py  session.yml
tmux/mrs_more_drones/config/: hw_api.yaml  network_config.yaml  simulator.yaml
tmux/mrs_more_drones/custom_configs/: custom_config.yaml  hw_api.yaml  simulator.yaml
tmux/mrs_one_drone/: controller.sh  estimator.sh  failsafe.sh  goto.py  land.sh  land_home.sh  midair.sh  params.sh  path.py  reference.py  rviz.rviz  session.yml  takeoff.sh  tracker.sh  waitForCore.py  waitForHwApi.py  waitForTakeoff.py
tmux/mrs_one_drone/config/: custom_config.yaml  simulator.yaml
tmux/mrs_one_drone/custom_configs/: active_estimators.yaml  custom_config.yaml  hw_api.yaml  mpc_tracker.yaml  platform_config.yaml  simulator.yaml  uav_manager.yaml
tmux/mrs_one_drone_f550/: rviz.rviz  session.yml
tmux/mrs_one_drone_f550/custom_configs/: se3_controller.yaml
tmux/mrs_one_drone_x500/: rviz.rviz  session.yml
tmux/mrs_one_drone_x500/custom_configs/: active_estimators.yaml  control_manager.yaml  hw_api.yaml  hw_api_plugin.yaml  mpc_tracker.yaml  odometry.yaml  se3_controller.yaml  simulator.yaml  uav_manager.yaml
tmux/mrs_one_drone_x500_standalone/: rviz.rviz  session.yml
tmux/mrs_one_drone_x500_standalone/custom_configs/: simulator.yaml  uav_manager.yaml
tmux/mrs_swarm/: session.yml  waitForControl.py  waitForHw.py  waitForTime.py
tmux/mrs_swarm/custom_configs/: active_estimators.yaml  hw_api.yaml  simulator.yaml  uav_manager.yaml  world.yaml
tmux/mrs_two_drones/: constraints.sh  eland.sh  gains.sh  goto1.py  goto2.py  layout.json  midair.sh  rviz.rviz  session.yml
tmux/mrs_two_drones/config/: simulator.yaml
tmux/old/mrs_more_drones/: session.yml
tmux/old/mrs_more_drones/config/: custom_config.yaml
tmux/old/mrs_one_drone/: session.yml
tmux/old/mrs_one_drone/config/: simulator.yaml
tmux/one_drone/: session.yml
tmux/one_drone/custom_configs/: mpc_tracker.yaml  odometry.yaml
tmux/one_drone_f550/: rviz.rviz  session.yml
tmux/one_drone_f550/custom_configs/: odometry.yaml  uav_manager.yaml
tmux/one_drone_x500/: session.yml
tmux/one_drone_x500/custom_configs/: mpc_tracker.yaml
tmux/one_drone_x500_test/: session.yml
tmux/one_drone_x500_test/custom_configs/: constraint_manager.yaml  control_test.yaml  uav_manager.yaml
tmux/standalone/: goto.py  goto.sh  layout.json  rviz.rviz  session.yml  vel_hdg_rate.sh
tmux/standalone/custom_configs/: simulator.yaml
tmux/standalone_400_uavs/: goto.py  kill.sh  layout.json  rviz.rviz  session.yml  velocity_cmd.py
tmux/standalone_400_uavs/custom_configs/: simulator.yaml
tmux/three_uavs/: rviz.rviz  session.yml
