<?xml version="1.0"?>
<package format="2">

  <name>mrs_multirotor_simulator</name>
  <version>1.0.0</version>
  <description>The MRS Multirotor simulator</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>mrs_uav_hw_api</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
    <mrs_uav_hw_api plugin="${prefix}/plugins.xml" />
  </export>

</package>
